# edgeslam_ROS2

./: .gitignore  CMakeLists.txt  MULTI_ROBOT_DEVELOPMENT_LOG.md
Examples/Monocular/: mono_euroc.cc  mono_kitti.cc  mono_tum.cc
Examples/RGB-D/: rgbd_tum.cc
Examples/ROS/Edge_SLAM/: CMakeLists.txt  package.xml
Examples/ROS/Edge_SLAM/launch/: README.md  multi_robot_rgbd.launch.py  server.launch.py
Examples/ROS/Edge_SLAM/src/: ros_mono.cc  ros_rgbd.cc  ros_stereo.cc
Examples/Stereo/: stereo_euroc.cc  stereo_kitti.cc
include/: Frame.h  KeyFrame.h  LocalMapping.h  Map.h  MapPoint.h  MultiClientServer.h  NetworkConfig.h  PnPsolver.h  System.h  TcpSocket.h  Tracking.h
src/: Frame.cc  KeyFrame.cc  LocalMapping.cc  Map.cc  MapPoint.cc  MultiClientServer.cc  NetworkConfig.cc  TcpSocket.cc  Tracking.cc
