<?xml version="1.0"?>

<package format="2">
  <name>edge_slam_ros2</name>
  <version>0.1.0</version>
  <description>Edge_SLAM ROS2 package for RGB-D, Monocular, and Stereo camera support.</description>
  <maintainer email="qkrrlans00@naver.com">Kimun Park</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_cmake</build_type>
    </export>
</package>